add solution for CommandProcessor